objects/vlocity_ins__GraphClone__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__BlackListedFields__c</fullName>
        <description>The list of fields that should be ignored. This must be their API name including namespace. 

One field per line.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Black Listed Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BlackListed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked this object type will not be cloned.</description>
        <inlineHelpText>Use this to prevent unnecessary duplicates.</inlineHelpText>
        <label>Black Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SObjectType__c</fullName>
        <description>The SObject API name that this record refers to including the namespace.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SObjectType</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Graph Clone</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>cp-{0000}</displayFormat>
        <label>Graph Clone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graph Clones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>